--- a/DATM/model_configure.IN
+++ b/DATM/model_configure.IN
@@ -1,13 +1,13 @@
 cdate0: 2011100100
 
 nfhout: 6
-#filename_base: cfsr.
-#iatm: 1760
-#jatm:  880
+filename_base: cfsr.
+iatm: 1760
+jatm:  880
 
-filename_base: gefs.
-iatm: 1536
-jatm:  768
+#filename_base: gefs.
+#iatm: 1536
+#jatm:  768
 
 dt_atmos:                   3600
 atm_coupling_interval_sec:  3600
